fixed scroll issues with semantic and overflow

--- a/client/main.css
+++ b/client/main.css
@@ -1,7 +1,14 @@
-/* * {
-  overflow-y: scroll;
+* {
   overflow-x: hidden;
-} */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
 
 *:focus {
   outline: none;
